<resources>
    <string name="app_name">RandomizedToDo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tasks">Tasks</string>
    <string name="menu_schedules">Schedules</string>
    <string name="menu_groups">Groups</string>
    <string name="next_task">Next Task!</string>
    <string name="menu_add">+</string>
    <string name="name_of_task">Name of Task:</string>
    <string name="name">Name</string>
    <string name="add_task">Add Task</string>
    <string name="add_group">Add group\n</string>
    <string name="name_of_schedule">Name of schedule</string>
    <string name="name_of_the_group">Name of the group:</string>
    <string name="add_schedule">Add schedule</string>
    <string name="schedule">Schedule:</string>
    <string name="group">Group:</string>
    <string name="repeating_every">repeating every</string>
    <string name="with_a_maximum_of">with a maximum of</string>
    <string name="times_every">times every</string>
    <string name="times">times</string>
    <string name="create">Create</string>
    <string name="close">Close</string>
    <string name="every">every</string>
    <string name="task_list">Task List</string>
    <string name="todos">ToDos</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="edit_schedule">Edit schedule</string>
    <string name="delete">Delete</string>
    <string name="edit_task">Edit task</string>
    <string name="enabled">Enabled</string>
</resources>